Started the web app interface

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
+APPPORT=3001
 DATABASE_DEVELOPMENT=mongodb://localhost:27017/ims
 DATABASE_PRODUCTION=mongodb+srv://levikehh:LevikehhStudios2019@cluster0-khar6.mongodb.net/ims?retryWrites=true&w=majority
 title=NoMindz Employee Management System
