--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ims",
   "version": "1.0.0",
   "description": "Inventory Management System by NoMindz Studios",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "NoMindz Studios",
   "license": "ISC",
