--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "log-to-file": "^2.0.2",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "pug": "^2.0.4"
   }
 }
