--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
     "nodemon": "^2.0.2",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "request": "^2.88.2",
+    "zingchart": "^2.8.9"
   }
 }
